

  ChangeLog.txt for libSUFR
  
     
   33: 22/03/2011:  *** SF release 0.1.4 ***
   
   32: 22/03/2011:
     - Critical bugfix: 
       dow() was still called within libSUFR - hence the library couldn't link to
       programs other than TheSky (which has its own dow()).
     - Updated doc/make
     
   31: 12/03/2011:  *** SF release 0.1.3 ***
     - Make gfortran compiler flags compatible with v.4.4
     - Adapted comments
   
   30: 12/03/2011:
     - Added text.f90, with lowercase(), uppercase(), uppercaseinitial() from TheSky
       - use with TheSky v.213
     - Small fixes in kinds.f90 and date_and_time.f90
     
   28/29: 06/02/2011:
     - Moved code from TheSky, use with rev. 209 of TheSky:
       - added angles.f90: rev*, rv*, asep, calpa, pastr_*, wdstr_*
       - added system.f90: quit_program
       - date_and_time.f90: added jd2cal, dtm2jd, tm2hm, tm2hms, doy, ymd2doy, doy2md, leapyr
     - It seems that a function in a module cannot be called by other functions in the same
       module - in order to do so, and make all public, create a submodule that is called 
       by the main module *and* the function(!)
     - Updated Doxyfile, shortened Doxygen file descriptions
          
   27: 01/01/2011:  *** SF release 0.1.2 ***
     - Added doc/CHANGELOG (for releases), version.txt (release version) to svn
     
   26: 01/01/2011:
     - Updated doc/README, added doc/INSTALL
     
   25: 01/01/2011:
     - Bugfix: definition of pi in constants.f90, introduced in rev.23
     - Few minor updates in constants.f90, CMake
     
   24: 01/01/2011:
     - Fix in CMake: using MATCHES iso STREQUAL allows partial match of compiler name
     
   23: AstroFloyd, 31/12/2010
     - Updated constants.f90:
       - renamed set_constants*() to set_SUFR_constants*()
       - added a single-precision version of all mathematical constants
     - Tweaked CMake files a bit
     
   21,22: AstroFloyd, 31/12/2010
     - Added g95 to CMake
     - Fixed a few g95 warnings