@@ -9,15 +9,6 @@
 
 make clean 
 
-if [ 2 -eq 1 ]; then
-    echo -e "\n\nMake with ifort:"
-    rm -f CMakeCache.txt
-    FC=ifort cmake -DCMAKE_INSTALL_PREFIX:PATH=/home/user/usr ..
-    make install
-    make clean
-fi
-
-
 if [ 1 -eq 1 ]; then
     echo -e "\n\nMake with gfortran:"
     rm -f CMakeCache.txt
@@ -35,7 +26,7 @@ if [ 2 -eq 1 ]; then
     make clean
 fi
 
-if [ 2 -eq 1 ]; then
+if [ 1 -eq 1 ]; then
     echo -e "\n\nMake with g95:"
     rm -f CMakeCache.txt
     FC=g95 cmake -DCMAKE_INSTALL_PREFIX:PATH=/home/user/usr ..
@@ -43,6 +34,15 @@ if [ 2 -eq 1 ]; then
     #make libSUFR_shared
     make clean
 fi
+
+if [ 1 -eq 1 ]; then
+    echo -e "\n\nMake with ifort:"
+    rm -f CMakeCache.txt
+    FC=ifort cmake -DCMAKE_INSTALL_PREFIX:PATH=/home/user/usr ..
+    make install
+    make clean
+fi
+
 
 rm -rf ../usr/
 
